# LiteratureAtlas

./: .gitignore  LICENSE  Package.swift  README.md  prompts.txt
Prompts/: assumption_stress_test.prompt.md  claim_extractor.prompt.md  claim_relation.prompt.md  cluster_summarizer.instructions.md  cluster_summarizer.prompt.md  corpus_briefing.instructions.md  corpus_briefing.prompt.md  method_blueprint.prompt.md  paper_summarizer.chunk.prompt.md  paper_summarizer.consolidate.prompt.md  paper_summarizer.instructions.md  paper_summarizer.section.prompt.md  paper_summarizer.section_instructions.md  paper_summarizer.takeaways.prompt.md  paper_trading_lens.instructions.md  paper_trading_lens.prompt.md  question_answerer.evidence.prompt.md  question_answerer.instructions.md  question_answerer.top_papers.prompt.md  strategy_blueprint.instructions.md  strategy_blueprint.prompt.md  topic_dossier.instructions.md  topic_dossier.prompt.md  ui.backtest_audit.instructions.md  ui.backtest_audit.prompt.md  ui.debate.instructions.md  ui.debate.prompt.md  ui.eli.instructions.md  ui.eli.prompt.md  ui.flashcards.instructions.md  ui.flashcards.prompt.md  ui.single_paper_qa.instructions.md  ui.single_paper_qa.prompt.md  ui.study_questions.instructions.md  (+1 more)
analytics/: README.md  __init__.py  pyproject.toml  rebuild_analytics.py  requirements.txt
analytics/ffi/: Cargo.toml
analytics/ffi/include/: atlas_ffi.h  module.modulemap
analytics/ffi/src/: lib.rs
analytics/rust/: Cargo.toml  README.md
analytics/rust/src/: main.rs
analytics/tests/: __init__.py  test_rebuild_analytics_unit.py
(+62 files in other folders)
